Fix passing in --add-opens for Java 9+ after the poiunit refactoring, this only caused problems with Java 9+ on Windows, which we do not run in CI (yet)
git-svn-id: https://svn.apache.org/repos/asf/poi/trunk@1851796 13f79535-47bb-0310-9956-ffa450edef68